learnCards fix: - added break-word on too long word in question, answer

--- a/src/pages/learnCards/learnCards.module.scss
+++ b/src/pages/learnCards/learnCards.module.scss
@@ -18,6 +18,7 @@
 
   span {
     font-weight: var(--font-weight-regular);
+    word-break: break-all;
   }
 }
 
